The auto-complete dropdown was too far to the right on IE. Now it appears correctly. Fixes bug #350.

--- a/htdocs/css/reviews.css
+++ b/htdocs/css/reviews.css
@@ -440,8 +440,6 @@
 /* Results container */
 .yui-skin-sam .yui-ac-container
 {
-  position: absolute;
-  top: 1.6em;
   width: 100%;
 }
 
